# dotfiles

./: .Brewfile  .gitconfig  .gitconfig.private.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .zshrc  CLAUDE.md  LICENSE  README.md  bootstrap.sh  sgconfig.yml  tools-setup.sh
.claude/: CLAUDE.md  settings.json
.claude/skills/code-reviewer/: SKILL.md
.github/actions/setup-ast-grep/: action.yml
.github/actions/setup-bats/: action.yml
.github/actions/setup-mise/: action.yml
.github/actions/setup-neovim/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: mise-update-check.yml  test.yml
docs/issues/1_stale な MCP・skill 参照を ast-grep で検出する CI ガードを追加/: issue.md
docs/issues/2_settings.json の live・committed 二重管理を文書化し curation を機械化/: issue.md
docs/issues/3_コミットメッセージの全角約物を commit-msg hook で静的に禁止する/: issue.md
docs/issues/4_nvim-markdown.bats の probe を setup_file でバッチ化する/: issue.md
docs/issues/5_CI のツール取得の curl-verify-extract を共通 composite action へ括り出す/: issue.md
docs/issues/6_CLAUDE.md の散文ルールのうち機械検出可能なものを ast-grep へ移す/: issue.md
docs/issues/closed/1_stale な MCP・skill 参照を ast-grep で検出する CI ガードを追加/: issue.md
docs/issues/closed/2_settings.json の live・committed 二重管理を文書化し curation を機械化/: issue.md
docs/issues/closed/3_コミットメッセージの全角約物を commit-msg hook で静的に禁止する/: issue.md
docs/issues/closed/5_CI のツール取得の curl-verify-extract を共通 composite action へ括り出す/: issue.md
docs/issues/closed/6_CLAUDE.md の散文ルールのうち機械検出可能なものを ast-grep へ移す/: issue.md
docs/issues/templates/: issue.md
docs/superpowers/plans/: 2026-06-24-config-drift-guard.md  2026-06-24-volta-to-mise-migration.md  2026-06-25-node-security-notifier.md  2026-06-26-windows-vm-verification-skill.md  2026-07-03-session-handoff.md  2026-07-09-nvim-markdown-highlight.md  2026-07-10-nvim-contrast-palette.md  2026-07-12-symlink-pairs-reverse-drift.md
docs/superpowers/specs/: 2026-06-24-config-drift-guard-design.md  2026-06-24-volta-to-mise-migration-design.md  2026-06-25-node-security-notifier-design.md  2026-06-26-windows-vm-verification-skill-design.md  2026-07-03-session-handoff-design.md  2026-07-09-nvim-markdown-highlight-design.md  2026-07-10-nvim-contrast-palette-design.md  2026-07-12-symlink-pairs-reverse-drift-design.md
home/: .Brewfile  .gitconfig  .gitignore  .zshrc  apm.lock.yaml  apm.yml
home/.claude/: .mcp.json  CLAUDE.md  settings.json  statusline-command.sh
home/.claude/hooks/: handoff-sentinel.py  tirith-check.py
home/.claude/plugins/: README.md
home/.claude/plugins/.claude-plugin/: marketplace.json
home/.claude/plugins/security-blue-red-team/: README.md
home/.claude/skills/ast-grep-practice/: SKILL.md
home/.claude/skills/ax/: README.md
home/.claude/skills/chrome-devtools-debugger/: SKILL.md
home/.claude/skills/e2e-scenario-impact-check/: SKILL.md
home/.claude/skills/empirical-prompt-tuning/: SKILL.md
home/.claude/skills/frontend-designer/: SKILL.md
home/.claude/skills/git-branch-switcher/: SKILL.md
home/.claude/skills/in-repo-issue/: SKILL.md
home/.claude/skills/markdown-to-pdf/: SKILL.md
home/.claude/skills/playwright-bug-reproducer/: SKILL.md
home/.claude/skills/playwright-cli/: SKILL.md
home/.claude/skills/playwright-cross-browser/: SKILL.md
home/.claude/skills/playwright-e2e-generator/: SKILL.md
home/.claude/skills/playwright-explorer/: SKILL.md
home/.claude/skills/pre-merge-quality-gate/: SKILL.md
home/.config/ghostty/: config
home/.config/git/: .gitignore_global
home/.config/herdr/: config.toml
home/.config/mise/: config.toml
home/.config/nvim/: .gitignore  init.lua  lazy-lock.json
home/.config/nvim/lua/plugins/: hex.lua  (+6 more)
rule-tests/: bats-no-bare-double-bracket-test.yml  bats-test-name-ascii-only-test.yml  nvim-lua-no-hex-literal-test.yml
rules/: bats-no-bare-double-bracket.yml  bats-test-name-ascii-only.yml  nvim-lua-no-hex-literal.yml
scripts/: README.md  backup.example.conf  backup.sh
scripts/backup-tool/: README.md  backup  backup.example.toml  backup.sh  pyproject.toml
scripts/backup-tool/src/backup_tool/: __init__.py  __main__.py  cli.py  config.py  disk.py  excludes.py  logging_setup.py  migrate.py  paths.py  rsync.py  runner.py
scripts/backup-tool/tests/: test_cli.py  test_config.py  test_disk.py  test_logging_setup.py  test_migrate.py  test_paths.py  test_rsync.py  test_runner.py
scripts/ci/: download-and-verify.sh
scripts/config-guard/: README.md  pyproject.toml
scripts/config-guard/src/config_guard/: __main__.py  apm_gitignore.py  cli.py  extractors.py  git_run.py  git_source.py  herdr_keys.py  mise_pins.py  models.py  settings_invariants.py  tool_refs.py
scripts/config-guard/tests/: test_apm_gitignore.py  test_cli.py  test_extractors.py  test_git_run.py  test_git_source.py  test_herdr_keys.py  test_mise_pins.py  test_settings_invariants.py  test_tool_refs.py
scripts/handoff-sentinel/: README.md  pyproject.toml
scripts/handoff-sentinel/tests/: test_handoff_sentinel.py
scripts/mise-update-notifier/: README.md  pyproject.toml
scripts/mise-update-notifier/src/mise_update_notifier/: __main__.py  cli.py  report.py  versions.py
scripts/mise-update-notifier/tests/: test_cli.py  test_report.py  test_versions.py
scripts/node-security-notifier/: README.md  com.hidari.node-security-notifier.plist  pyproject.toml  run.sh
scripts/node-security-notifier/src/node_security_notifier/: __main__.py  cli.py  diff.py  feed.py  fetch.py  models.py  notify.py  state.py
scripts/node-security-notifier/tests/: test_cli.py  test_diff.py  test_feed.py  test_notify.py  test_state.py
scripts/node-security-notifier/tests/fixtures/: sample_feed.xml
scripts/tests/: ast-grep-wiring-probe.py  ast-grep.bats  backup.bats  bootstrap.bats  bootstrap_plugins.bats  download-and-verify.bats  gitleaks.bats  nvim-markdown-probe.lua  nvim-markdown.bats  test_helper.bash
scripts/tests/fixtures/: extended.conf
scripts/tirith-hook/: README.md  pyproject.toml
scripts/tirith-hook/tests/: test_tirith_hook.py
scripts/util-tools/small-id-gen/: pyproject.toml  smaill-id-gen.py  small-id-gen.py  small-id-gen.sh
(+40 files in other folders)
