[project]
name = "handoff-sentinel"
version = "0.1.0"
description = "home/.claude/hooks/handoff-sentinel.py（Claude Code PostToolUse/Stop/SessionStart フック）の単体/統合テスト"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hidari" }]
dependencies = []

# 本体 (handoff-sentinel.py) は symlink 都合で home/.claude/hooks/ に置くため、
# このプロジェクトはインストール可能なパッケージを持たないテスト専用ハーネス。
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# N802: pytest メソッド名を日本語の仕様文（テスト＝仕様）にするため、非ASCII識別子を
# 小文字判定できない ruff の N802 誤検知 (ruff 0.15.20 で確認) を許容する。
"tests/*" = ["S101", "N802"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
