[project]
name = "tirith-hook"
version = "0.1.0"
description = "home/.claude/hooks/tirith-check.py（Claude Code PreToolUse フック）の単体/統合テスト"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hidari" }]
dependencies = []

# 本体 (tirith-check.py) は symlink 都合で home/.claude/hooks/ に置くため、
# このプロジェクトはインストール可能なパッケージを持たないテスト専用ハーネス。
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
